# hermes-agent

./: .dockerignore  AGENTS-FULL-BACKUP.md  AGENTS.md  BlackGold-Equity-Partners-Operating-Agreement.md  Dockerfile  Dockerfile.railway  MARCUS_CONSOLIDATION_MESSAGE.md  cli.py  config.snapshot.yaml  daily_brief_research.py  hermes_constants.py  model_tools.py  nix  operational-corrections-2026-07-11.md  pyproject.toml  railway.json  railway.toml  runtime-deps.json  toolsets.py
agent/: agent_init.py  conversation_compression.py  prompt_builder.py  telemetry.py
daily_research/: brief_raw.json  github_raw.json  github_search.py
docker/: stage2-hook.sh
docs/: BLACKGOLD_OPERATING_STANDARD_v2.md  capability-assessment.md  chief-improvement-officer.md  commanders-oath.md  commissioning-order.md  culture-directive.md  executive-action-framework.md  executive-governance-charter.md  executive-operating-doctrine.md  executive-strategic-mandate.md  founders-letter.md.bak.20260718113537  institutional-growth-directive.md  marcus-commander-directive.md  mission.md  organizational-directive.md  standing-order-01.md.bak.20260718113537  standing-order-02.md
gateway/: __init__.py  api_server.py  config.py  run.py  slash_commands.py
hermes_cli/: adoption_offer.py  config.py  cron.py  env_loader.py  main.py  tools_config.py
launch/: README.md  acp-local-metering-plan.md  conftest.py  disaster-recovery-playbooks.md  document_worker_base.py  document_workflow.py  document_workflow_factory.py  e2e-telegram-runtime-manifest.md  evidence_ledger.py  hatchet-deploy-spec.md  (+10 more)
(+244 files in other folders)
